# Minimal-Engine

./: .clang-format  CMakeLists.txt  LICENSE.txt  README.md
Assets/Scripts/: Scene_0.lua
include/: AssetManager.hpp  Collision.hpp  Component.hpp  Constants.hpp  FontManager.hpp  Game.hpp  GameObject.hpp  GameObjectManager.hpp  Scene.hpp  TextureManager.hpp
include/Components/: ColliderComponent.hpp  KeyboardInputComponent.hpp  LifeSpanComponent.hpp  LuaBehaviourComponent.hpp  ProjectileEmitterComponent.hpp  RigidbodyComponent.hpp  SpriteAnimation.hpp  SpriteComponent.hpp  TextLabelComponent.hpp  TileComponent.hpp  TransformComponent.hpp
src/: AssetManager.cpp  CMakeLists.txt  Collision.cpp  Component.cpp  FontManager.cpp  Game.cpp  GameObject.cpp  GameObjectManager.cpp  Scene.cpp  TextureManager.cpp  main.cpp
